airflow/backups/de.yaml
apiVersion: extensions/v1beta1 #networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  defaultBackend:
    service:
      name: astro-vishnuram-nginx-default-backend   
      port:
        number: 8080
