airflow/backups/energetic-elliptical-9602-airflow-ingress-route-one.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"route.openshift.io/v1","kind":"Route","metadata":{"annotations":{"kubernetes.io/ingress.class":"default","route.openshift.io/termination":"reencrypt"},"labels":{"app.kubernetes.io/managed-by":"Helm","chart":"airflow-0.19.0","component":"airflow-ingress","heritage":"Helm","platform":"astro-vishnuram","release":"energetic-elliptical-9602","tier":"airflow","workspace":"ckovjzyor01811q0im1d7o7jj"},"name":"energetic-elliptical-9602-airflow-ingress-route-one","namespace":"astro-vi [...]
    kubernetes.io/ingress.class: default
    route.openshift.io/termination: reencrypt
  creationTimestamp: 2021-05-25T11:30:30Z
  labels:
    app.kubernetes.io/managed-by: Helm
    chart: airflow-0.19.0
    component: airflow-ingress
    heritage: Helm
    platform: astro-vishnuram
    release: energetic-elliptical-9602
    tier: airflow
    workspace: ckovjzyor01811q0im1d7o7jj
  name: energetic-elliptical-9602-airflow-ingress-route-one
  namespace: astro-vishnuram-energetic-elliptical-9602
  resourceVersion: "22380582"
  selfLink: /apis/route.openshift.io/v1/namespaces/astro-vishnuram-energetic-elliptical-9602/routes/energetic-elliptical-9602-airflow-ingress-route-one
  uid: 45122ea0-f297-4b27-b972-f7b9bdab3824
spec:
  host: deployments.vishnuram.apps.ocp-test.astronomer-development.com
  path: /energetic-elliptical-9602/airflow
  port:
    targetPort: nginx-ui
  tls:
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIFoTCCBImgAwIBAgISAyt7C/kQPR3mKWvj4XpDaERSMA0GCSqGSIb3DQEBCwUA
[...]
      MV21x7Y=
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFFjCCAv6gAwIBAgIRAJErCErPDBinU/bWLiWnX1owDQYJKoZIhvcNAQELBQAw
[...]
      nLRbwHOoq7hHwg==
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFYDCCBEigAwIBAgIQQAF3ITfU6UK47naqPGQKtzANBgkqhkiG9w0BAQsFADA/
[...]
      Dfvp7OOGAN6dEOM4+qR9sdjoSYKEBpsr6GtPAQw4dy753ec5
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
    key: |
      -----BEGIN PRIVATE KEY-----
      MIIEvQIBADANBgkqhkiG9w0BAQEFAASCBKcwggSjAgEAAoIBAQDjaQPmy/NoMj7W
[...]
      BYetDCOnJVmCgM9xEuNuggw=
      -----END PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: energetic-elliptical-9602-webserver
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: 2021-05-25T11:30:30Z
      status: "True"
      type: Admitted
    host: deployments.vishnuram.apps.ocp-test.astronomer-development.com
    routerCanonicalHostname: apps.ocp-test.astronomer-development.com
    routerName: default
    wildcardPolicy: None
